# Usage_Check

./: .gitignore  AGENTS.md  Cargo.toml  Package.swift  README.md
.github/: dependabot.yml
.github/workflows/: release.yml
Sources/UsageCheckApp/: main.swift
Sources/UsageCheckCore/: LogScanners.swift  Models.swift  OAuthFetchers.swift  ScannerUtilities.swift  UsageFormatting.swift  UsageReader.swift
Tests/UsageCheckCoreTests/: UsageCheckCoreTests.swift
crates/usage-core/: Cargo.toml
crates/usage-core/src/: account.rs  aggregate.rs  attribution.rs  attribution_tests.rs  capabilities.rs  edition.rs  lib.rs  models.rs  paid.rs
crates/usage-core/src/fetch/: agy.rs  claude.rs  codex.rs  cursor.rs  grok.rs  higgsfield.rs  mod.rs
crates/usage-core/src/scanners/: claude.rs  codex.rs  gemini.rs
docs/: editions.md  openapi.yaml
docs/superpowers/notes/: agy-usage-investigation.md  smoke-checklist.md
docs/superpowers/plans/: 2026-07-08-usagecheck-crossplatform.md  2026-07-11-provider-auth-capabilities.md
docs/superpowers/specs/: 2026-07-08-usagecheck-crossplatform-design.md  2026-07-10-provider-auth-capabilities-design.md
scripts/: build-edition.sh  package-app.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.pro.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agy_local.rs  api.rs  api_accounts.rs  api_accounts_tests.rs  api_alerts.rs  api_alerts_tests.rs  api_auth.rs  api_auth_tests.rs  api_csv.rs  api_csv_tests.rs  api_health.rs  api_health_tests.rs  api_metrics.rs  api_metrics_tests.rs  api_server.rs  api_tests.rs  claude_cli.rs  claude_cli_tests.rs  claude_statusline.rs  claude_statusline_tests.rs  cli_auth.rs  cli_auth_tests.rs  codex_cli.rs  codex_cli_tests.rs  cursor_local.rs  edition.rs  import.rs  import_tests.rs  main.rs  main_tests.rs  menu_actions.rs  oauth.rs  oauth_tests.rs  paths.rs  paths_profiles.rs  poller.rs  store.rs  store_tests.rs  terminal.rs  terminal_tests.rs  (+1 more)
src-tauri/src/import/: claude.rs  codex.rs  grok.rs  higgsfield.rs  mod.rs
src-tauri/src/oauth/: flow.rs  google_secret.rs  identity.rs  mod.rs
src-tauri/src/poller/: http.rs  last_success.rs  last_success_tests.rs  local_scan.rs  local_scan_tests.rs  mod.rs  providers.rs  providers_pro.rs  providers_pro_tests.rs  providers_tests.rs  usage_model.rs  usage_model_tests.rs
src-tauri/src/store/: credentials.rs  index.rs  mod.rs  mutations.rs  validation.rs
src-tauri/src/tray_menu/: actions.rs  format.rs  menu.rs  mod.rs  tests.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: api.ts  main.ts  style.css
