[package]
name = "usage-app"
version = "0.1.3"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
usage-core = { path = "../crates/usage-core" }
# custom-protocol: required so `cargo build --release` embeds ui/dist and does
# NOT treat the binary as `cfg(dev)` (which would load http://localhost:5173 and
# show a blank window when the Vite dev server is not running).
tauri = { version = "2", features = ["tray-icon", "custom-protocol"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = "3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tiny_http = "0.12"
open = "5"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2"
rand = "0.8"

[features]
# Keep custom-protocol on by default for plain `cargo build --release`.
# `cargo tauri dev` disables this feature so the app loads the Vite dev server.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
